# shell-compose

./: CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  dist-workspace.toml  index.html  oranda.json  shell-compose-installer.ps1.txt  shell-compose-installer.sh.txt
.cargo/: config.toml
artifacts/: index.html
changelog/: index.html
changelog/0.2.1-beta/: index.html
changelog/0.2.2/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.2/: index.html
changelog/v0.1.2-beta8/: index.html
changelog/v0.1.3/: index.html
changelog/v0.2.0/: index.html
changelog/v0.2.1/: index.html
changelog/v0.3.0/: index.html
changelog/v0.3.0-beta2/: index.html
changelog/v0.3.1/: index.html
changelog/v0.3.2/: index.html
src/: cli.rs  command.rs  dispatcher.rs  display.rs  errors.rs  ipc.rs  justfile.rs  lib.rs  runner.rs  spawner.rs
