[package]
name = "shell-compose"
version = "0.3.0-beta2"
readme = "README.md"
description = "Lightweight background process runner for long-running or scheduled jobs"
categories = ["command-line-utilities"]
keywords = ["shell", "command", "parallel", "job", "runner"]
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]
homepage = "https://pka.github.io/shell-compose/"
repository = "https://github.com/pka/shell-compose"
license = "MIT"
edition = "2021"
default-run = "shell-compose"

[dependencies]
anstyle-query = "1.1.1"
bincode = "1.3.3"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.0.0", features = ["derive", "env", "wrap_help"] }
comfy-table = { version = "7.1.1", default-features = false }
cron = "0.12.1"
env_logger = { version = "0.11.5", default-features = false, features = ["humantime", "auto-color", "color"] }
interprocess = "2.2.1"
job_scheduler_ng = "2.0.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = { version = "0.32.0", default-features = false, features = ["system", "user"] }
thiserror = "1.0.63"

[[bin]]
path = "src/bin/shell_compose.rs"
name = "shell-compose"

[[bin]]
path = "src/bin/shell_composed.rs"
name = "shell-composed"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

[workspace.metadata.dist.dependencies.apt]
gcc-aarch64-linux-gnu = { targets = ["aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl"] }
